template.json
{
    "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "virtualMachines_WEB1_name": { "defaultValue": "WEB1", "type": "String" },
        "virtualMachines_WEB2_name": { "defaultValue": "WEB2", "type": "String" },
        "virtualNetworks_VNET1_LAB1_name": { "defaultValue": "VNET1-LAB1", "type": "String" },
        "networkInterfaces_web1_name": { "defaultValue": "web1127_z2", "type": "String" },
        "networkInterfaces_web2_name": { "defaultValue": "web1127_z2Act2", "type": "String" },
        "networkSecurityGroups_NSG_WEB1_name": { "defaultValue": "NSG-WEB1", "type": "String" },
        "publicIPAddresses_LB_ip_name": { "defaultValue": "LB-PublicIP", "type": "String" },
        "loadBalancers_LB_name": { "defaultValue": "LB-Standard", "type": "String" }
    },
    "resources": [
        /* STEP 2: LOAD BALANCER PUBLIC IP (Standard, Static, Zone 2) */
        {
            "type": "Microsoft.Network/publicIPAddresses",
            "apiVersion": "2024-07-01",
            "name": "[parameters('publicIPAddresses_LB_ip_name')]",
            "location": "eastus2",
            "sku": { "name": "Standard" },
            "zones": [ "2" ],
            "properties": { "publicIPAllocationMethod": "Static" }
        },
        /* NSG: ALLOWS HTTP & SSH TRAFFIC */
        {
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "2024-07-01",
            "name": "[parameters('networkSecurityGroups_NSG_WEB1_name')]",
            "location": "eastus2",
            "properties": {
                "securityRules": [
                    { "name": "ALLOW-SSH", "properties": { "protocol": "TCP", "sourcePortRange": "*", "destinationPortRange": "22", "sourceAddressPrefix": "*", "destinationAddressPrefix": "*", "access": "Allow", "priority": 100, "direction": "Inbound" } },
                    { "name": "ALLOW-HTTP", "properties": { "protocol": "TCP", "sourcePortRange": "*", "destinationPortRange": "80", "sourceAddressPrefix": "*", "destinationAddressPrefix": "*", "access": "Allow", "priority": 101, "direction": "Inbound" } }
                ]
            }
        },
        /* VIRTUAL NETWORK & SUBNET */
        {
            "type": "Microsoft.Network/virtualNetworks",
            "apiVersion": "2024-07-01",
            "name": "[parameters('virtualNetworks_VNET1_LAB1_name')]",
            "location": "eastus2",
            "properties": {
                "addressSpace": { "addressPrefixes": [ "10.0.0.0/16" ] },
                "subnets": [ { "name": "SUBNET-WEB", "properties": { "addressPrefixes": [ "10.0.1.0/24" ] } } ]
            }
        },
        /* STEP 3: STANDARD LOAD BALANCER RESOURCE */
        {
            "type": "Microsoft.Network/loadBalancers",
            "apiVersion": "2024-07-01",
            "name": "[parameters('loadBalancers_LB_name')]",
            "location": "eastus2",
            "sku": { "name": "Standard" },
            "dependsOn": [ "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_LB_ip_name'))]" ],
            "properties": {
                "frontendIPConfigurations": [ {
                    "name": "LoadBalancerFrontend",
                    "properties": { "publicIPAddress": { "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicIPAddresses_LB_ip_name'))]" } }
                } ],
                "backendAddressPools": [ { "name": "WebBackendPool" } ],
                /* CRITICAL: Health Probe on Port 80 */
                "probes": [ { "name": "HttpProbe", "properties": { "protocol": "Http", "port": 80, "requestPath": "/", "intervalInSeconds": 5, "numberOfProbes": 2 } } ],
                "loadBalancingRules": [ {
                    "name": "HTTP-Rule",
                    "properties": {
                        "frontendIPConfiguration": { "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_LB_name')), '/frontendIPConfigurations/LoadBalancerFrontend')]" },
                        "backendAddressPool": { "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_LB_name')), '/backendAddressPools/WebBackendPool')]" },
                        "probe": { "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_LB_name')), '/probes/HttpProbe')]" },
                        "protocol": "Tcp", "frontendPort": 80, "backendPort": 80
                    }
                } ]
            }
        },
        /* STEP 4: NICs ATTACHED TO THE BACKEND POOL */
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2024-07-01",
            "name": "[parameters('networkInterfaces_web1_name')]",
            "location": "eastus2",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_VNET1_LAB1_name'))]",
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_LB_name'))]"
            ],
            "properties": {
                "ipConfigurations": [ {
                    "name": "ipconfig1",
                    "properties": {
                        "subnet": { "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNET1_LAB1_name'), 'SUBNET-WEB')]" },
                        "loadBalancerBackendAddressPools": [ { "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_LB_name')), '/backendAddressPools/WebBackendPool')]" } ]
                    }
                } ],
                "networkSecurityGroup": { "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_WEB1_name'))]" }
            }
        },
        {
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "2024-07-01",
            "name": "[parameters('networkInterfaces_web2_name')]",
            "location": "eastus2",
            "dependsOn": [
                "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworks_VNET1_LAB1_name'))]",
                "[resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_LB_name'))]"
            ],
            "properties": {
                "ipConfigurations": [ {
                    "name": "ipconfig1",
                    "properties": {
                        "subnet": { "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworks_VNET1_LAB1_name'), 'SUBNET-WEB')]" },
                        "loadBalancerBackendAddressPools": [ { "id": "[concat(resourceId('Microsoft.Network/loadBalancers', parameters('loadBalancers_LB_name')), '/backendAddressPools/WebBackendPool')]" } ]
                    }
                } ],
                "networkSecurityGroup": { "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('networkSecurityGroups_NSG_WEB1_name'))]" }
            }
        }
        /* ... Virtual Machine resources remain same as your template ... */
    ]
}
